# winwebcam

./: .gitignore  README.md  camera_diagnostic.py  pyproject.toml  webcam_ocr.py
winwebcam/: __init__.py  cli.py  image_ocr.py  webcam_ocr.py
